# PAD-Box-Exporter

./: .gitignore  README.md  pyproject.toml  requirements.txt
pad_box_export/: __init__.py  __main__.py  classifier.py  cli.py  dedupe.py  models.py  ocr.py  pipeline.py  video.py
tests/: test_classifier.py  test_dedupe.py
